--- a/laravel/.env.model
+++ b/laravel/.env.model
@@ -1,6 +1,6 @@
 APP_NAME=GodotLaravel
 APP_ENV=local
-APP_KEY=base64:OyMnDwec3o0hJUflcYUp5hben3UeKnEJA8Ekpbpd3HU=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
@@ -11,8 +11,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=godot_laravel
-DB_USERNAME=birdy
-DB_PASSWORD=birdy
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
