--- a/docker/apache/000-default.conf
+++ b/docker/apache/000-default.conf
@@ -1,5 +1,7 @@
-ServerName localhost
 <VirtualHost *:80>
+    ServerName godotlaravel.local
+    ServerAlias godotlaravel.local
+    
     DocumentRoot /var/www/html/public
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
