--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - APP_ENV=local
       - DB_HOST=db-service
       - DB_PORT=3306
-      - DB_DATABASE=db
+      - DB_DATABASE=godot_laravel
       - DB_USERNAME=root
       - DB_PASSWORD=
     volumes: 
@@ -25,7 +25,7 @@ services:
     ports:
       - "3306:3306"
     environment:
-      MYSQL_DATABASE: db
+      MYSQL_DATABASE: godot_laravel
       MYSQL_PASSWORD:
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
     volumes:
