--- a/docker/apache/000-default.conf
+++ b/docker/apache/000-default.conf
@@ -1,7 +1,5 @@
-<VirtualHost *:80>
-    ServerName godotlaravel.local
-    ServerAlias godotlaravel.local
-    
+ServerName localhost
+<VirtualHost *:80>    
     DocumentRoot /var/www/html/public
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
